[gd_scene load_steps=4 format=3 uid="uid://xwfxfbu6gmk4"]

[ext_resource type="Script" path="res://scripts/DeckZone.gd" id="1_e8j7d"]
[ext_resource type="Texture2D" uid="uid://c7i2mbfm0nndq" path="res://images/deck.png" id="2_e02p7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0lto0"]
bg_color = Color(1, 0, 0, 1)

[node name="DeckZone" type="Panel"]
custom_minimum_size = Vector2(60, 80)
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -80.0
offset_right = 60.0
grow_vertical = 0
script = ExtResource("1_e8j7d")

[node name="DeckImage" type="TextureButton" parent="."]
custom_minimum_size = Vector2(60, 80)
layout_mode = 0
offset_right = 60.0
offset_bottom = 80.0
texture_normal = ExtResource("2_e02p7")
ignore_texture_size = true
stretch_mode = 0

[node name="DeckCountLabel" type="Label" parent="DeckImage"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -20.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 26.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 26
theme_override_styles/normal = SubResource("StyleBoxFlat_0lto0")
text = "0"
horizontal_alignment = 1
vertical_alignment = 1
