extends Panel

@onready var deck_count_label: Label = $DeckImage/DeckCountLabel
@export var card_scene: PackedScene
@export var deck_data: Array[CardData] = []  # å¤–éƒ¨ã‹ã‚‰ã‚‚ç·¨é›†å¯èƒ½ã«

# DeckPopup ã®ãƒ—ãƒ¬ãƒãƒ–ã‚’ãƒ­ãƒ¼ãƒ‰ï¼ˆãƒ‘ã‚¹ã«æ³¨æ„ï¼‰
@onready var deck_popup_scene: PackedScene = preload("res://scenes/DeckPopup.tscn")

func _ready():
	update_deck_count()

func update_deck_count():
	print("update_deck_count:", str(deck_data.size()))
	deck_count_label.text = str(deck_data.size())

# ãƒ‡ãƒƒã‚­ãƒ‡ãƒ¼ã‚¿ã‚’ã‚³ãƒ”ãƒ¼ã—ã¦ä¿æŒ
func set_cards(new_deck_data: Array[CardData]) -> void:
	deck_data = new_deck_data.duplicate() as Array[CardData]
	print("âœ… DeckZone: deck_data ã‚’å—ã‘å–ã‚Šã¾ã—ãŸ")

# ãƒãƒƒãƒ—ã‚¢ãƒƒãƒ—ã§ãƒ‡ãƒƒã‚­ã‚’è¡¨ç¤º
func show_deck_popup() -> void:
	print("ğŸƒ show_deck_popup() å‘¼ã³å‡ºã—é–‹å§‹")

	if not deck_popup_scene:
		push_error("âŒ DeckPopup.tscn ã®èª­ã¿è¾¼ã¿ã«å¤±æ•—ã—ã¾ã—ãŸï¼ˆdeck_popup_scene ãŒ nullï¼‰")
		return
	else:
		print("âœ… DeckPopup.tscn ã®èª­ã¿è¾¼ã¿æˆåŠŸ")

	var popup = deck_popup_scene.instantiate()
	print("ğŸ“¦ DeckPopup ã‚¤ãƒ³ã‚¹ã‚¿ãƒ³ã‚¹åŒ–å®Œäº†: ", popup)
	
	# DeckPopup ã‚’ã€Œç”»é¢åŸºæº–ã®è¦ªãƒãƒ¼ãƒ‰ã€ã«è¿½åŠ ã™ã‚‹
	get_tree().get_root().add_child(popup)
	print("âœ… DeckPopup ã‚’ã‚·ãƒ¼ãƒ³ã«è¿½åŠ ã—ã¾ã—ãŸ")

	if popup.has_method("show_cards"):
		print("ğŸ“¨ show_cards() ãƒ¡ã‚½ãƒƒãƒ‰ã‚ã‚Šã€‚ã‚«ãƒ¼ãƒ‰è¡¨ç¤ºå‡¦ç†ã‚’å‘¼ã³å‡ºã—ã¾ã™")
		popup.show_cards(deck_data)
	else:
		print("âš ï¸ DeckPopup ã« show_cards() ãŒå­˜åœ¨ã—ã¾ã›ã‚“")
